# autotools_demo_qt

./: .gitignore  Makefile.am  README.md  autotools_demo_lib.pc  autotools_demo_qt.pc.in  build.sh  config.h.in  configure.ac  push-code.sh
3rd_lib/: Makefile.am
build-script/pc/ubuntu/: config.sh
doc/: Makefile.am
example/: HyQtDemo.cpp  Makefile.am  hy_calc_demo
example/mouse/: Makefile.am  MouseDialog.cpp  MouseDialog.h  main.cpp  mouse.ui
example/multi_language/: Makefile.am  main.cpp  multi_language.cpp  multi_language.h  multi_language.ui
example/thread/: Makefile.am
example/thread/QRunnable/: Makefile.am  bubble_sort.cpp  bubble_sort.h  quick_sort.cpp  quick_sort.h  random.cpp  random.h  sort_dialog.cpp  sort_dialog.h  sort_dialog.ui
example/thread/QThread/: Makefile.am  bubble_sort_thread.cpp  bubble_sort_thread.h  main.cpp  my_dialog.h  qthread_dialog.cpp  qthread_dialog.h  quick_sort_thread.cpp  quick_sort_thread.h  random_thread.cpp  random_thread.h  sort_dialog.cpp  sort_dialog.h
example/thread/moveToThread/: Makefile.am  bubble_sort.cpp  bubble_sort.h  main.cpp  quick_sort.cpp  quick_sort.h  random.cpp  random.h  sort_dialog.cpp  sort_dialog.h
include/: DialogShow.h  Makefile.am  test.hpp  utils.h
include/ui/: Makefile.am
m4/: check_libhy_log.m4  check_libhy_utils.m4  select_chip.m4  select_vender.m4
res/: Makefile.am  autotroll.mk
res/img/: Makefile.am
res/qss/: Makefile.am  demo.qss
res/ui/: DialogShow.ui  Makefile.am
res/voice/cn/: Makefile.am
res/voice/en/: Makefile.am
src/: DialogShow.cpp  Makefile.am  main.cpp  test.cpp  test.hpp
