# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    28/04 2021 17:15
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        28/04 2021      create the file
# 
#     last modified: 28/04 2021 17:15
# ===============================================================

# ------------------
# make install files
# ------------------
_install_files_com 	=
dist_doc_DATA 		= $(_install_files_com)
