# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    28/04 2021 17:14
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        28/04 2021      create the file
# 
#     last modified: 28/04 2021 17:14
# ===============================================================

NO_INSTALL_HEADERS_COM 	=
noinst_HEADERS  		= $(NO_INSTALL_HEADERS_COM)

INSTALL_HEADERS_COM 	=
install_includedir 		= $(includedir)/@project_name@
install_include_HEADERS = $(INSTALL_HEADERS_COM)
