# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    27/04 2021 20:17
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        27/04 2021      create the file
# 
#     last modified: 27/04 2021 20:17
# ===============================================================

SUBDIRS = \
		  ui
# ---------------
# make dist files
# ---------------
_dist_files_com = Doxyfile \
				  get_project_info.sh
EXTRA_DIST 		= $(_dist_files_com)

