# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    20/05 2021 14:41
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        20/05 2021      create the file
# 
#     last modified: 20/05 2021 14:41
# ===============================================================

qssdir = $(prefix)/res/qss
qss_DATA = \
		   demo.qss
