# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    23/11 2023 14:16
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        23/11 2023      create the file
# 
#     last modified: 23/11 2023 14:16
# ===============================================================

include $(top_srcdir)/res/autotroll.mk

_qt_ui_files 	= DialogShow.ui.h

BUILT_SOURCES = $(_qt_ui_files)

